<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:clickable="true"
    android:elevation="4dp"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clItemCityContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivIconCity"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="8dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImageViewRounded"
            app:srcCompat="@drawable/city_moscow" />

        <TextView
            android:id="@+id/tvCityName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toTopOf="@id/tvCountryName"
            app:layout_constraintStart_toEndOf="@id/ivIconCity"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/city_moscow" />

        <TextView
            android:id="@+id/tvCountryName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintBottom_toTopOf="@id/ivCityCard"
            app:layout_constraintStart_toStartOf="@id/tvCityName"
            app:layout_constraintTop_toBottomOf="@id/tvCityName"
            tools:text="@string/country_russia" />

        <ImageButton
            android:id="@+id/imgBtnIsFavorite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="12dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_description_add_in_favorites"
            android:src="@drawable/ic_favorite_disable"
            app:layout_constraintBottom_toTopOf="@id/ivCityCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/tvCountryName"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorAccent" />

        <ImageView
            android:id="@+id/ivCityCard"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/content_description_city_img"
            android:scaleType="centerCrop"
            android:src="@drawable/city_moscow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivIconCity" />

        <TextView
            android:id="@+id/tvPopulationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="8dp"
            android:text="@string/population_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvPopulation"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivCityCard" />

        <TextView
            android:id="@+id/tvPopulation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintBottom_toBottomOf="@id/tvPopulationTitle"
            app:layout_constraintEnd_toStartOf="@id/tvSquareTitle"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/tvPopulationTitle"
            app:layout_constraintTop_toTopOf="@id/tvPopulationTitle"
            tools:text="2 000 000" />

        <TextView
            android:id="@+id/tvSquareTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/square_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            app:layout_constraintEnd_toStartOf="@id/tvSquare"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintTop_toTopOf="@id/tvPopulationTitle" />

        <TextView
            android:id="@+id/tvSquare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintBottom_toBottomOf="@id/tvPopulationTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvPopulationTitle"
            tools:text="2 560 м²" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tvCityName,tvCountryName" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>